--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -896,6 +896,10 @@ img.brand-devices {
     position: relative;
 }
 
+.for-slice-mode {
+    flex-wrap: wrap;
+}
+
 .canvas-container {
     position: relative;
     width: -moz-available;
@@ -903,6 +907,10 @@ img.brand-devices {
     width: fill-available;
     display: flex;
     flex-wrap: wrap;
+}
+
+.hidden {
+    display: none !important;
 }
 
 .files-bar {
@@ -1304,36 +1312,60 @@ span.algorithm-name,
     border: 0.5px solid #333;
 }
 
-.color.black {
-    background: #35373a;
+.original {
+    background: #9e9e9e;
+    background: -webkit-linear-gradient(#9e9e9e, #607d8b);
+    background: -o-linear-gradient(#9e9e9e, #607d8b);
+    background: -moz-linear-gradient(#9e9e9e, #607d8b);
+    background: linear-gradient(#9e9e9e, #607d8b);
 }
 
-.color.white {
-    background: #eff2f7;
+.moonlit-asteroid {
+    background: #0F2027;
+    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);
+    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
 }
 
-.color.bordeuax {
-    background: #9e0142;
+.grade-grey {
+    background: #bdc3c7;
+    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);
+    background: linear-gradient(to right, #2c3e50, #bdc3c7);
 }
 
-.color.red {
-    background: #d53e4f;
+.red-sunset {
+    background: #355C7D;
+    background: -webkit-linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);
+    background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);
 }
 
-.color.orange {
-    background: #f46d43;
+.lawrencium {
+    background: #0f0c29;
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
 }
 
-.color.yellow {
-    background: #fee08b;
+.celestial {
+    background: #C33764;
+    background: -webkit-linear-gradient(to right, #1D2671, #C33764);
+    background: linear-gradient(to right, #1D2671, #C33764);
 }
 
-.color.green {
-    background: #abdda4;
+.royal {
+    background: #141E30;
+    background: -webkit-linear-gradient(to right, #243B55, #141E30);
+    background: linear-gradient(to right, #243B55, #141E30);
 }
 
-.color.blue {
-    background: #3288bd;
+.frost {
+    background: #000428;
+    background: -webkit-linear-gradient(to right, #004e92, #000428);
+    background: linear-gradient(to right, #004e92, #000428);
+}
+
+.titanium {
+    background: #283048;
+    background: -webkit-linear-gradient(to right, #859398, #283048);
+    background: linear-gradient(to right, #859398, #283048);
 }
 
 .opacity {
@@ -1687,6 +1719,81 @@ span.algorithm-name,
 .dg.main {
     position: absolute;
     right: 0;
+}
+
+.slice-slider {
+    width: 100%;
+    height: 60%;
+    overflow: hidden;
+}
+
+.slice-slider-nav {
+    width: 100%;
+    height: 27%;
+    padding: 0 35px;
+    position: relative;
+}
+
+.slice-slider-nav .slick-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 99;
+}
+
+.slice-slider-nav .slick-next {
+    right: 0;
+}
+
+.slice-slider-nav .slick-prev {
+    left: 0;
+}
+
+.slice-slider-nav .slick-dots {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 99;
+}
+
+.slice-slider-nav .slick-dots li button {
+    border-radius: 100%;
+}
+
+.sidenav-trigger {
+    position: absolute;
+    right: 20px;
+    bottom: 85px;
+}
+
+.slider-option,
+.slider-nav-option {
+    padding: 0 32px;
+}
+
+.slice-mode-other {
+    padding: 0 32px;
+}
+
+.canvas-2d {
+    width: 500px;
+    height: 500px;
+    margin: 5px;
+    float: left;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.canvas-2d-nav {
+    width: 200px;
+    height: 200px;
+    margin: 5px;
+    float: left;
+    position: relative;
+    overflow: hidden;
 }
 
 .file {
