--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -127,24 +127,24 @@
         </div>
     </div>
     <ul id="slide-out" class="sidenav">
-        <li><a class="subheader">Slice 1</a></li>
+            <li><a class="subheader">Slice 1</a></li>
         <li>
             <div class="slider-option">
                 <p>
                     <label>
-                        <input class="with-gap" name="group1" type="radio" checked />
+                        <input class="with-gap" name="upper_slide" type="radio" value="1" />
                         <span>1</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input class="with-gap" name="group1" type="radio" />
+                        <input class="with-gap" name="upper_slide" type="radio" value="2"/>
                         <span>2</span>
                     </label>
                 </p>
                 <p>
                     <label>
-                        <input class="with-gap" name="group1" type="radio"  />
+                        <input class="with-gap" name="upper_slide" type="radio" value="3" checked />
                         <span>3</span>
                     </label>
                 </p>
@@ -158,19 +158,19 @@
             <div class="slider-nav-option">
                 <p>
                     <label>
-                            <input class="with-gap" name="group2" type="radio" checked />
+                            <input class="with-gap" name="lower_slide" type="radio" value="5" checked />
                             <span>5</span>
                         </label>
                 </p>
                 <p>
                     <label>
-                            <input class="with-gap" name="group2" type="radio" />
+                            <input class="with-gap" name="lower_slide" value="6" type="radio" />
                             <span>6</span>
                         </label>
                 </p>
                 <p>
                     <label>
-                            <input class="with-gap" name="group2" type="radio"  />
+                            <input class="with-gap" name="lower_slide" value="7" type="radio"  />
                             <span>7</span>
                         </label>
                 </p>
@@ -185,14 +185,14 @@
                 <span>Autoplay</span>
                 <label class="right">
                   Off
-                  <input type="checkbox">
+                  <input type="checkbox" class="auto-play">
                   <span class="lever"></span>
                   On
                 </label>
             </div>
         </li>
         <li>
-            <a class="waves-effect waves-light btn">Apply</a>
+            <a class="waves-effect waves-light btn btn-apply">Apply</a>
         </li>
     </ul>
     <div class="viewer">
