--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -193,6 +193,7 @@
         </li>
         <li>
             <a class="waves-effect waves-light btn btn-apply">Apply</a>
+            <a class="waves-effect waves-light blue accent-3 btn">Apply</a>
         </li>
     </ul>
     <div class="viewer">
