--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -184,7 +184,7 @@ body {
 .upload-area {
     display: none;
     width: 650px;
-    height: 530px;
+    height: 600px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -467,7 +467,7 @@ tbody tr {
 }
 
 .rendering-algorithm {
-    width: 98%;
+    /* width: 98%;
     justify-content: space-evenly;
     position: absolute;
     left: 50%;
@@ -480,7 +480,18 @@ tbody tr {
     text-transform: uppercase;
     display: flex;
     align-items: center;
-    margin-bottom: 6px;
+    margin-bottom: 6px; */
+}
+
+.rendering-algorithm {
+    width: 92%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 .upload-cancel {
@@ -517,6 +528,7 @@ tbody tr {
 }
 
 .algorithm-button {
+    width: 38%;
     background-color: #1ECD97;
     padding: 10px 30px;
     outline: none;
@@ -525,6 +537,8 @@ tbody tr {
     transition: all 0.5s ease-in;
     border: 2px solid #1ECD97;
     color: #FFFFFF;
+    margin-bottom: 15px;
+    text-align: center;
 }
 
 .algorithm-button.clickable {
@@ -1162,7 +1176,8 @@ span.algorithm-name,
 }
 
 .button-container {
-    display: flex;
+    /* display: flex; */
+    display: none;
     position: absolute;
     right: 20px;
 }
