--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -64,9 +64,7 @@
                 <div class="algorithm-button marching-cube">Marching Cube</div>
                 <div class="algorithm-button ray-casting">Ray Casting</div>
                 <div class="algorithm-button texture-based">Texture-based</div>
-            </div>
-            <div class="user-options">
-                <a class="waves-effect waves-light btn slice-only">Slice</a>
+                <div class="algorithm-button slice-only">Slice Mode</div>
             </div>
         </div>
     </div>
@@ -237,7 +235,7 @@
                     <i class="material-icons">tune</i>
                 </a>
                 <div class="slice-slider hidden"></div>
-                <div class="slice-slider-nav-container">
+                <div class="slice-slider-nav-container hidden">
                     <i class="material-icons slider-control left">keyboard_arrow_left</i>
                     <div class="slice-slider-nav grey darken-3 z-depth-3 hidden"></div>
                     <i class="material-icons slider-control right">keyboard_arrow_right</i>
