integrated point cloud rendering
html, mesh container, camera bugs

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -13,6 +13,7 @@
     <link type='text/css' rel='stylesheet' href='/css/animate.css' />
     <script type="text/javascript" src="/js/opencv.js"></script>
     <script type="text/javascript" src="/js/three.js"></script>
+    <script type="text/javascript" src="/js/TrackballControls.js"></script>
     <script type="text/javascript" src="/js/ami.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/mrdoob/stats.js/master/build/stats.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
