--- a/src/helpers/css/style.css
+++ b/src/helpers/css/style.css
@@ -205,12 +205,12 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
     transition: opacity ease-in .4s;
-    opacity: 0;
+    opacity: 1;
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    z-index: 10;
+    z-index: 11;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -910,6 +910,7 @@ img.brand-devices {
     width: fill-available;
     display: flex;
     flex-wrap: wrap;
+    width: 75%;
 }
 
 .hidden {
@@ -1030,6 +1031,16 @@ img.brand-devices {
     padding: 13px 14px;
     display: flex;
     align-items: center;
+    text-transform: uppercase;
+    border-bottom: 1.5px solid rgba(0, 0, 0, .12);
+    box-shadow: none;
+    cursor: pointer;
+}
+
+.sliders {
+    position: relative;
+    display: flex;
+    flex-direction: column;
     text-transform: uppercase;
     border-bottom: 1.5px solid rgba(0, 0, 0, .12);
     box-shadow: none;
@@ -1679,7 +1690,7 @@ span.algorithm-name,
     width: 100%;
     height: 100%;
     background-color: #333333;
-    z-index: 1;
+    z-index: 0;
     opacity: .4;
     transition: opacity ease 0.3s;
 }
@@ -1738,13 +1749,13 @@ span.algorithm-name,
     width: 100%;
     height: 60%;
     overflow: hidden;
-    margin-top: 10px;
+    background-color: #000;
 }
 
 .slice-slider-nav-container {
-    width: 95%;
+    width: 100%;
     height: 30%;
-    margin: 0 auto 90px;
+    margin: 0 auto 0px;
     position: relative;
 }
 
@@ -1753,6 +1764,8 @@ span.algorithm-name,
     height: 100%;
     padding: 0 35px;
     position: relative;
+    background-color: #000;
+    border-top: 3px solid #fff;
 }
 
 .slider-control {
@@ -1800,13 +1813,37 @@ span.algorithm-name,
     z-index: 20;
 }
 
+.sliders>div {
+    float: none;
+    line-height: 37px;
+}
+
+.subheader {
+    cursor: initial;
+    pointer-events: none;
+    color: rgba(0, 0, 0, 0.54);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 48px;
+    padding: 5px 20px;
+}
+
+.slice-apply {
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+    height: 48px;
+    line-height: 48px;
+    margin: 5px 20px;
+}
+
 .slider-option,
 .slider-nav-option {
-    padding: 0 32px;
+    padding: 0 20px;
 }
 
 .slice-mode-other {
-    padding: 0 32px;
+    padding: 0 20px;
 }
 
 .switch label input[type=checkbox]:checked+.lever:after {
@@ -1836,8 +1873,8 @@ input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
 }
 
 .canvas-2d {
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     margin: 5px;
     float: left;
     position: relative;
@@ -1846,8 +1883,8 @@ input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
 }
 
 .canvas-2d-nav {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     margin: 5px;
     float: left;
     position: relative;
@@ -2061,4 +2098,27 @@ input[type=checkbox]:checked:not(:disabled).tabbed:focus~.lever::before {
     right: 0;
     z-index: 999;
     background-color: #FFF;
+}
+
+.my-slider {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.slider-upper {
+    width: 100%;
+    height: 60%;
+    background-color: gray;
+}
+
+.slider-below {
+    width: 100%;
+    height: 40%;
+    background-color: #513e3e;
+}
+
+.my_row {
+    margin-left: 0;
+    margin-right: 0;
 }
